--- a/frontend/src/signup.html
+++ b/frontend/src/signup.html
@@ -19,9 +19,7 @@
                     </div>
                     <div class="register-wrapper">
                         <form action="" id="registerForm" method="post">
-                            <div class="text1-wrapper">
-
-                            </div>
+                            <h2>친구들의 사진과 동영상을 보려면<br>가입하세요.</h2>
                             <div class="linkFacebook">
                                 <button class="link-facebook">
                                     <span class="facebook-img"><img id="facebook_logo_img" alt="facebook-logo" src="/frontend/img/facebook_logo.png"></img></span>
@@ -35,8 +33,8 @@
                             </div>
                             <div class="register">
                                 <div class="input-section">
-                                    <input type="text" id="user_id" autocapitalize="off" autocorrect="off" required>
-                                    <label for="user_id">휴대폰 번호 또는 이메일 주소</label>
+                                    <input type="text" id="user_add" autocapitalize="off" autocorrect="off" required>
+                                    <label for="user_add">휴대폰 번호 또는 이메일 주소</label>
                                 </div>
                                 <div class="input-section">
                                     <input type="text" id="user_name" autocapitalize="off" autocorrect="off" required>
@@ -55,9 +53,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="text2-wrapper">
-
-                                </div>
+                                <p>
+                                    저희 서비스를 이용하는 사람이 회원님의 연락처 정보를 Instagram에 업로드했을 수도 있습니다.
+                                    <a href="#">더 알아보기</a>
+                                </p>
                                 <div class="btn-section">
                                     <button class="btn-signup">가입</button>
                                 </div>
@@ -67,7 +66,7 @@
                 </div>
                 <div class="login-section">
                     <div class="text-wrapper">
-                        <p>계정이 있으신가요?<a href="/frontend/src/index.html"><span>로그인</span></a></p>
+                        <p>계정이 있으신가요? <a href="/frontend/src/index.html"><span>로그인</span></a></p>
                     </div>
                 </div>
                 <div class="download-section">
